--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,6 @@
 {
     "app_id": "com.moodle.moodlemobile",
-    "appname": "Moodle Mobile",
+    "appname": "Impact Tutors",
     "desktopappname": "Moodle Desktop",
     "versioncode": 3800,
     "versionname": "3.8.0-dev",
